force-app/main/default/objects/ssot__LoyaltyProgramEngagementAttribute__dlm/fields/ssot__IsAttrValCreatedPerPeriod__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsAttrValCreatedPerPeriod__c</fullName>
    <label>Is Attr Val Created Per Period</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsAttrValCreatedPerPeriod</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>