force-app/main/default/objects/ssot__LoyaltyProgramEngagementAttribute__dlm/fields/ssot__ShouldOverwriteAttributeCurrentValue__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShouldOverwriteAttributeCurrentValue__c</fullName>
    <label>Should Overwrite Attribute Current Val</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ShouldOverwriteAttributeCurrentValue</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>