force-app/main/default/objects/ssot__LoyaltyProgramEngagementAttribute__dlm/fields/ssot__TargetValueText__c.field-meta.xml
<CustomField>
    <fullName>ssot__TargetValueText__c</fullName>
    <label>Target Value</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TargetValueText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>