force-app/main/default/objects/ssot__LoyaltyProgramEngagementAttribute__dlm/fields/ssot__ValueResetFrequency__c.field-meta.xml
<CustomField>
    <fullName>ssot__ValueResetFrequency__c</fullName>
    <label>Value Reset Frequency</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ValueResetFrequency</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>