force-app/main/default/objects/ssot__LoyaltyProgramEngagementAttribute__dlm/fields/ssot__ValueType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ValueType__c</fullName>
    <label>Value Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ValueType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>